<resources>
    <string name="app_name">winit</string>
    <string name="button">next</string>
    <string name="faq">faqbutton</string>
    <string name="contact">contactbutton</string>
    <string name="feedback">feedbackbutton</string>
    <string name="donatebutton">donatebutton</string>
    <string name="schedule">schedulebtn</string>
    <string name="date_view">Set the Date</string>
    <string name="send_to">send to:</string>
    <string name="lungcanbutton">lung</string>
    <string name="skincanbutton">skin</string>
    <string name="colcanbutton">col</string>
    <string name="brecanbutton">brecan</string>
    <string name="prcanbutton">prcan</string>
    <string name="amount">Amount</string>
    <string name="enter_name">NAME</string>
    <string name="upi_id_">upi id:</string>
    <string name="pay_nowbutton">pay now</string>
    <string name="type_event">Type event</string>
    <string name="addeventbtn">add event</string>
    <string name="remind_me">Remind me</string>
    <string name="_00_00am">00:00AM</string>
    <string name="textview">TextView</string>
    <string name="string_textview">ggsh</string>
    <string name="send_feedback">send feedback</string>
    <string name="lungcanview">Lung cancer</string>
    <string name="skin_cancer">Skin cancer</string>
    <string name="skincan_info">Skin cancer — the abnormal growth of skin cells — most often develops on skin exposed to the sun.But this common form of cancer can also occur on areas of your skin not ordinarily exposed to sunlight.There are three main types of skin cancer:
</string>
    <string name="cell_carcinoma">1.basal cell carcinoma 2.squamous cell carcinoma 3.melanoma</string>
    <string name="sym_skincaan">Skin cancer symptoms</string>
    <string name="sksym">The sooner a skin cancer is identified and treated, the better your chance of avoiding surgery or, in the case of a serious melanoma or other skin cancer, potential disfigurement or even death.</string>
    <string name="skcann">It is also a good idea to talk to your doctor about your level of risk and for advice on early detection.Become familiar with the look of your skin, so you pick up any changes that might suggest a skin cancer. Look for:any crusty, non-healing sores,small lumps that are red, pale or pearly in colour,new spots, freckles or any moles changing in colour, thickness or shape over a period of weeks to months.Both basal cell carcinoma and squamous cell carcinoma are known as non-melanoma skin cancer or keratinocyte cancers. Keratinocyte cancer is more common in men, with almost double the incidence compared to women.

Melanoma is the third most common cancer in Australians. In 2015, 13,694  Australians were diagnosed with melanoma.

Every year, in Australia:

skin cancers account for around 80% of all newly diagnosed cancers
the majority of skin cancers are caused by exposure to the sun
the incidence of skin cancer is one of the highest in the world, two to three times the rates in Canada, the US and the UK. </string>
    <string name="your_name">your name</string>
    <string name="type_feedback">type feedback</string>
    <string name="prostate_cancer">Prostate cancer</string>
    <string name="prostate_cancer_is_cancer_that_occurs_in_the_prostate_the_prostate_is_a_small_walnut_shaped_gland_in_males_that_produces_the_seminal_fluid_that_nourishes_and_t">Prostate cancer is cancer that occurs in the prostate. The prostate is a small walnut-shaped gland in males that produces the seminal fluid that nourishes and transports sperm. Prostate cancer is one of the most common types of cancer. Many prostate cancers grow slowly and are confined to the prostate gland, where they may not cause serious harm. However, while some types of prostate cancer grow slowly and may need minimal or even no treatment, other types are aggressive and can spread quickly.</string>
    <string name="symptoms_prostate_cancer_may_cause_no_signs_or_symptoms_in_its_early_stages_prostate_cancer_that_s_more_advanced_may_cause_signs_and_symptoms_such_as_trouble_urinating_decreased_force_in_the_stream_of_urine_blood_in_the_urine_blood_in_the_semen_bone_pain_losing_weight_without_trying_erectile_dysfunction">Symptoms:Prostate cancer may cause no signs or symptoms in its early stages. Prostate cancer that is more advanced may cause signs and symptoms such as: Trouble urinating Decreased force in the stream of urine ,Blood in the urine, Blood in the semen ,Bone pain ,Losing weight without trying Erectile dysfunction</string>
    <string name="prcansymp">symptoms</string>
    <string name="lung_cancer">Lung cancer</string>
    <string name="lungcannfoxyz">Lung cancer is a type of cancer that begins in the lungs. Your lungs are two spongy organs in your chest that take in oxygen when you inhale and release carbon dioxide when you exhale. Lung cancer is the leading cause of cancer deaths worldwide. People who smoke have the greatest risk of lung cancer, though lung cancer can also occur in people who have never smoked. The risk of lung cancer increases with the length of time and number of cigarettes you have smoked. If you quit smoking, even after smoking for many years, you can significantly reduce your chances of developing lung cancer.</string>
    <string name="lungcantwo">Lung cancer typically does not cause signs and symptoms in its earliest stages. Signs and symptoms of lung cancer typically occur when the disease is advanced. Signs and symptoms of lung cancer may include: A new cough that does not go away Coughing up blood, even a small amount Shortness of breath Chest pain Hoarseness Losing weight without trying Bone pain Headache</string>
    <string name="breast_cancer">Breast cancer</string>
    <string name="brcanfoone">Breast cancer is a disease in which cells in the breast grow out of control. There are different kinds of breast cancer. The kind of breast cancer depends on which cells in the breast turn into cancer.Breast cancer can begin in different parts of the breast. A breast is made up of three main parts: lobules, ducts, and connective tissue. The lobules are the glands that produce milk. The ducts are tubes that carry milk to the nipple. The connective tissue (which consists of fibrous and fatty tissue) surrounds and holds everything together. Most breast cancers begin in the ducts or lobules.

Breast cancer can spread outside the breast through blood vessels and lymph vessels. When breast cancer spreads to other parts of the body, it is said to have metastasized.
</string>
    <string name="kinds_of_breast_cancer">Kinds of Breast Cancer</string>
    <string name="brecanfoooo">The most common kinds of breast cancer are— Invasive ductal carcinoma. The cancer cells grow outside the ducts into other parts of the breast tissue. Invasive cancer cells can also spread, or metastasize, to other parts of the body. Invasive lobular carcinoma. Cancer cells spread from the lobules to the breast tissues that are close by. These invasive cancer cells can also spread to other parts of the body.</string>
    <string name="colorectal_cancer">Colorectal cancer</string>
    <string name="coloncannfo">Colon cancer is a type of cancer that begins in the large intestine (colon). The colon is the final part of the digestive tract. Colon cancer typically affects older adults, though it can happen at any age. It usually begins as small, noncancerous (benign) clumps of cells called polyps that form on the inside of the colon. Over time some of these polyps can become colon cancers.Polyps may be small and produce few, if any, symptoms. For this reason, doctors recommend regular screening tests to help prevent colon cancer by identifying and removing polyps before they turn into cancer. If colon cancer develops, many treatments are available to help control it, including surgery, radiation therapy and drug treatments, such as chemotherapy, targeted therapy and immunotherapy.</string>
    <string name="a_persistent_change_in_your_bowel_habits_including_diarrhea_or_constipation_or_a_change_in_the_consistency_of_your_stool_rectal_bleeding_or_blood_in_your_stool_persistent_abdominal_discomfort_such_as_cramps_gas_or_pain_a_feeling_that_your_bowel_doesn_t_empty_completely_weakness_or_fatigue_unexplained_weight_loss_many_people_with_colon_cancer_experience_no_symptoms_in_the_early_stages_of_the_disease_when_symptoms_appear_they_ll_likely_vary_depending_on_the_cancer_s_size_and_location_in_your_large_intestine">A persistent change in your bowel habits, including diarrhea or constipation or a change in the consistency of your stool Rectal bleeding or blood in your stool Persistent abdominal discomfort, such as cramps, gas or pain A feeling that your bowel does not empty completely Weakness or fatigue Unexplained weight loss Many people with colon cancer experience no symptoms in the early stages of the disease. When symptoms appear, they will likely vary, depending on the cancer size and location in your large intestine.</string>
    <string name="signs_and_symptoms_of_colon_cancer_include">Signs and symptoms of colon cancer include:</string>
    <string name="lung_cancer_symptoms">Lung cancer symptoms</string>
    <string name="prostate_cancer_symptoms">prostate cancer symptoms:</string>
    <string name="email_id">email id</string>
    <string name="subject">subject</string>
    <string name="body_of_the_mail">body of the mail</string>
    <string name="send_email">Send email</string>
    <string name="gdgd">Choose an Email client :</string>
    <string name="name">name</string>
    <string name="upi_id">Upi id:</string>
    <string name="amount">Amount</string>
    <string name="pay_now">pay now</string>

</resources>